advances in the chained buffer index